feat: adicionar paginacao ao endpoint de listagem de consultas